--- a/endpoint-spec.yaml
+++ b/endpoint-spec.yaml
@@ -9,8 +9,7 @@ servers:
 paths:
   /subscriptions:
     post:
-      summary: Registers a new rest hook
-      operationId: createSubscriptions
+      summary: Create a new subscription for a specific device. The subscription is created with the attribute "active" set to true, meaning that the subscription is active. To deactivate the subscription, you should call the endpoint /subscriptions/{subscriptionId}:deactivate.
       requestBody:
         required: true
         content:
@@ -18,10 +17,6 @@ paths:
             schema:
               type: object
               properties:
-                baseReceiverUrl:
-                  type: string
-                relativeReceiverUrl:
-                  type: string
                 device:
                   type: string
                   format: uuid
@@ -32,6 +27,38 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/Subscription'
+        '400':
+          description: invalid device uuid format supplied
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+        default:
+          description: unexpected error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+  /subscriptions/{subscriptionId}:listen:
+    post:
+      summary: This endpoint is responsible for creating a communication channel with whoever calls it, sending notifications from a device.
+      parameters:
+        - in: path
+          name: subscriptionId
+          description: The subscription id
+          required: true
+          schema:
+            type: string
+            format: uuid
+      responses:
+        '201':
+          description: successful operation
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Subscription'
+        '404':
+          description: There is no subscription with the provided ID.
         default:
           description: unexpected error
           content:
@@ -40,7 +67,7 @@ paths:
                 $ref: '#/components/schemas/Error'
   /subscriptions/{subscriptionId}:
     get:
-      summary: Retrieves the subscription based on its id
+      summary: Retrieves the subscription based on its id. This way you can check the attributes of the subscription, such as the "active" attribute which indicates whether the subscription is active or not.
       parameters:
         - in: path
           name: subscriptionId
@@ -57,12 +84,6 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/Subscription'
-        '400':
-          description: invalid id supplied
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/Error'
         '404':
           description: gateway not found
           content:
@@ -71,7 +92,7 @@ paths:
                 $ref: '#/components/schemas/Error'
   /notifications:
     post:
-      summary: This receives a request from the device
+      summary: This endpoint is responsible for receiving notifications requests from temperature monitoring appliances.
       requestBody:
         required: true
         content:
@@ -124,14 +145,16 @@ components:
         id:
           type: string
           format: uuid
-        baseReceiverUrl:
-          type: string
-        relativeReceiverUrl:
-          type: string
         active:
-          type: string
+          type: boolean
         device:
           type: string
+        createdDate:
+          type: string
+          format: date-time
+        lastModifiedDate:
+          type: string
+          format: date-time
     Notification:
       type: object
       properties:
@@ -144,6 +167,12 @@ components:
           type: string
         code:
           type: string
+        createdDate:
+          type: string
+          format: date-time
+        lastModifiedDate:
+          type: string
+          format: date-time
         subscription:
           type: string
           format: uuid
